--- a/i3status.conf
+++ b/i3status.conf
@@ -9,29 +9,29 @@
 general {
         colors = true
         interval = 5
-	color_good = '#2646ea'
-	color_bad = '#B75D24'
+    	color_good = '#666666'
+    	color_bad = '#ffffff'
 }
 
-order += "ipv6"
-order += "disk /"
-order += "run_watch DHCP"
-order += "run_watch VPN"
+#order += "ipv6"
+#order += "disk /"
+#order += "run_watch DHCP"
+#order += "run_watch VPN"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery 0"
-order += "load"
+#order += "load"
 order += "tztime local"
 
 wireless _first_ {
         format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+        format_down = ""
 }
 
 ethernet _first_ {
         # if you use %speed, i3status requires root privileges
         format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+        format_down = ""
 }
 
 battery 0 {
@@ -47,7 +47,7 @@ run_watch VPN {
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = "%d-%m %H:%M:%S"
 }
 
 load {
