purple status bar and rename

--- a/i3status.conf
+++ b/i3status.conf
@@ -9,8 +9,9 @@
 general {
         colors = true
         interval = 5
-    	color_good = '#666666'
+    	color_good = '#420067'
     	color_bad = '#ffffff'
+        color_separator = '#420067'
 }
 
 #order += "ipv6"
