--- a/mpd.conf
+++ b/mpd.conf
@@ -18,7 +18,8 @@ music_directory		"~/Music"
 # playlist files not created by the server but only if they are in the MPD
 # format. This setting defaults to playlist saving being disabled.
 #
-playlist_directory		"/var/lib/mpd/playlists"
+# playlist_directory		"/var/lib/mpd/playlists"
+playlist_directory		"~/.config/mpd/playlists"
 #
 # This setting sets the location of the MPD database. This file is used to
 # load the database at server start up and store the database while the 
@@ -26,7 +27,8 @@ playlist_directory		"/var/lib/mpd/playlists"
 # MPD to accept files over ipc socket (using file:// protocol) or streaming
 # files over an accepted protocol.
 #
-db_file			"/var/lib/mpd/tag_cache"
+# db_file			"/var/lib/mpd/tag_cache"
+db_file			"~/.config/mpd/database"
 # 
 # These settings are the locations for the daemon log files for the daemon.
 # These logs are great for troubleshooting, depending on your log_level
@@ -35,25 +37,29 @@ db_file			"/var/lib/mpd/tag_cache"
 # The special value "syslog" makes MPD use the local syslog daemon. This
 # setting defaults to logging to syslog, otherwise logging is disabled.
 #
-log_file			"/var/log/mpd/mpd.log"
+# log_file			"/var/log/mpd/mpd.log"
+log_file			"~/.config/mpd/log"
 #
 # This setting sets the location of the file which stores the process ID
 # for use of mpd --kill and some init scripts. This setting is disabled by
 # default and the pid file will not be stored.
 #
-pid_file			"/run/mpd/pid"
+# pid_file			"/run/mpd/pid"
+pid_file			"~/.config/mpd/pid"
 #
 # This setting sets the location of the file which contains information about
 # most variables to get MPD back into the same general shape it was in before
 # it was brought down. This setting is disabled by default and the server 
 # state will be reset on server start up.
 #
-state_file			"/var/lib/mpd/state"
+# state_file			"/var/lib/mpd/state"
+state_file			"~/.config/mpd/state"
 #
 # The location of the sticker database.  This is a database which
 # manages dynamic information attached to songs.
 #
-sticker_file                   "/var/lib/mpd/sticker.sql"
+# sticker_file                   "/var/lib/mpd/sticker.sql"
+sticker_file                   "~/.config/mpd/sticker.sql"
 #
 ###############################################################################
 
@@ -65,7 +71,7 @@ sticker_file                   "/var/lib/mpd/sticker.sql"
 # initialization. This setting is disabled by default and MPD is run as the
 # current user.
 #
-user				"mpd"
+user				"tonio"
 #
 # This setting specifies the group that MPD will run as. If not specified
 # primary group of user specified with "user" setting will be used (if set).
@@ -181,11 +187,11 @@ auto_update    "yes"
 # Database #######################################################################
 #
 
-database {
-       plugin "proxy"
-       host "other.mpd.host"
-       port "6660"
-}
+# database {
+#        plugin "proxy"
+#        host "other.mpd.host"
+#        port "6660"
+# }
 
 # Input #######################################################################
 #
