--- a/i3status.conf
+++ b/i3status.conf
@@ -9,7 +9,8 @@
 general {
         colors = true
         interval = 5
-    	color_good = '#420067'
+    	# color_good = '#420067'
+        color_good = '#999999'
     	color_bad = '#ffffff'
         color_separator = '#420067'
 }
