--- a/i3status.conf
+++ b/i3status.conf
@@ -9,53 +9,47 @@
 general {
         colors = true
         interval = 5
-    	# color_good = '#420067'
-        color_good = '#999999'
-    	color_bad = '#ffffff'
-        color_separator = '#420067'
 }
 
 #order += "ipv6"
+#order += "wireless _first_"
+#order += "ethernet _first_"
+order += "battery all"
 #order += "disk /"
-#order += "run_watch DHCP"
-#order += "run_watch VPN"
-order += "wireless _first_"
-order += "ethernet _first_"
-order += "battery 0"
 #order += "load"
+#order += "memory"
 order += "tztime local"
 
 wireless _first_ {
         format_up = "W: (%quality at %essid) %ip"
-        format_down = ""
+        format_down = "W: down"
 }
 
 ethernet _first_ {
-        # if you use %speed, i3status requires root privileges
         format_up = "E: %ip (%speed)"
-        format_down = ""
+        format_down = "E: down"
 }
 
-battery 0 {
-        format = "%status %percentage %remaining"
+battery all {
+        #format = "%status %percentage %remaining"
+        format = "%status %percentage"
 }
 
-run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
-}
-
-run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
-}
-
-tztime local {
-        format = "%d-%m %H:%M:%S"
+disk "/" {
+        format = "%avail"
 }
 
 load {
         format = "%1min"
 }
 
-disk "/" {
-        format = "%avail"
+memory {
+        format = "%used | %available"
+        threshold_degraded = "1G"
+        format_degraded = "MEMORY < %available"
+}
+
+tztime local {
+        #format = "%Y-%m-%d %H:%M:%S"
+        format = "%m-%d %H:%M:%S"
 }
